<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/address"
                android:textSize="24sp"
                android:text="@string/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/update_at"
                android:textSize="14sp"
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:textSize="18sp"
                android:text="@string/clear_sky"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/temp"
                android:textSize="90sp"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/_24_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/temp_min"
                    android:text="@string/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    
                </TextView>
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                </Space>
                <TextView
                    android:id="@+id/temp_max"
                    android:text="@string/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/detailsContainer"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#3CF1EBF1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunrise"
                            app:tint="#FFF"
                            android:contentDescription="@string/sunrise_image">

                        </ImageView>
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content">
                        </Space>
                        <TextView
                            android:textSize="12sp"
                            android:text="@string/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                        <TextView
                            android:id="@+id/sunrise"
                            android:textSize="14sp"
                            android:text="@string/_5_30am5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#3CF1EBF1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunset"
                            app:tint="#FFF"
                            android:contentDescription="@string/sunset_image">

                        </ImageView>
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content">
                        </Space>
                        <TextView
                            android:textSize="12sp"
                            android:text="@string/zakat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                        <TextView
                            android:id="@+id/sunset"
                            android:textSize="14sp"
                            android:text="@string/_5_30am"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content">

                    </Space><LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#FFF"
                        android:contentDescription="@string/veter_image">

                    </ImageView>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">
                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/veter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/wind"
                        android:textSize="14sp"
                        android:text="@string/_5_30am4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content">

                    </Space>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp">

                </Space>
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#3CF1EBF1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/pressure"
                            app:tint="#FFF"
                            android:contentDescription="@string/davlenie_image">

                        </ImageView>
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content">
                        </Space>
                        <TextView
                            android:textSize="12sp"
                            android:text="@string/davlenie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                        <TextView
                            android:id="@+id/pressure"
                            android:textSize="14sp"
                            android:text="@string/_5_30am3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#3CF1EBF1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/humidity"
                            app:tint="#FFF"
                            android:contentDescription="@string/vlajnost_image">

                        </ImageView>
                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content">
                        </Space>
                        <TextView
                            android:textSize="12sp"
                            android:text="@string/vlajnost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                        <TextView
                            android:id="@+id/humidity"
                            android:textSize="14sp"
                            android:text="@string/_5_30am1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="#FFF"
                        android:contentDescription="@string/created_image">

                    </ImageView>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">
                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/created_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/info"
                        android:textSize="14sp"
                        android:text="Башкиров"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content">

                    </Space>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>
    <TextView
        android:id="@+id/errortext"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
</RelativeLayout>